删除一个警告

--- a/daohang.css
+++ b/daohang.css
@@ -7,7 +7,8 @@ img {
 }
 .logo {
     background: gray;
-    display: inline-block;
+    /* display: inline-block; */
+    /* 这个可以删掉 */
     float: left;
     margin-top: 8px;
     margin-left: 10px ;
